# DiscordSelfService

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.txt  production.ini  pyproject.toml  pyramid.wsgi  requirements.txt  setup.py  testing.ini
cl_discord_self_service/: __init__.py  config-example.ini  development.ini  production.ini  pyramid.wsgi  pytest.ini
cl_discord_self_service/cl_discord_self_service/: routes.py
cl_discord_self_service/cl_discord_self_service/static/: theme.css
cl_discord_self_service/cl_discord_self_service/templates/: home.jinja2
cl_discord_self_service/cl_discord_self_service/views/: callback.py  colors.py  default.py  notfound.py  nsfw-grant.py  stripe_sess.py
cl_discord_self_service/templates/: colors.jinja2  home.jinja2  layout.jinja2
cl_discord_self_service/views/: callback.py  colors.py  default.py  nsfw-grant.py  stripe_sess.py
tests/: conftest.py  test_views.py
